--- a/appproject/accounts/templates/accounts/password_reset.html
+++ b/appproject/accounts/templates/accounts/password_reset.html
@@ -26,7 +26,7 @@
                         {% if back_url %}
                             <a href="{{ back_url }}" class="btn-back">戻る</a>
                         {% else %}
-                            <a href="{% url 'student_login' %}" class="btn-back">戻る</a>
+                            <a href="{% url 'accounts:student_login' %}" class="btn-back">戻る</a>
                         {% endif %}
                         <button type="submit" class="btn-send">送る</button>
                     </div>
