--- a/appproject/accounts/templates/accounts/password_reset_complete.html
+++ b/appproject/accounts/templates/accounts/password_reset_complete.html
@@ -12,7 +12,7 @@
             <div class="form-side">
                 <h2>パスワードがリセットされました</h2>
                 <p>新しいパスワードでログインしてください。</p>
-                <a href="{% url 'student_login' %}" class="btn-back">ログインへ</a>
+                <a href="{% url 'accounts:student_login' %}" class="btn-back">ログインへ</a>
             </div>
         </div>
     </div>
