--- a/appproject/accounts/templates/accounts/password_reset_done.html
+++ b/appproject/accounts/templates/accounts/password_reset_done.html
@@ -12,7 +12,7 @@
             <div class="form-side">
                 <h2>送信しました</h2>
                 <p>メールを送信しました。届いたメールの指示に従ってパスワードを再設定してください。</p>
-                <a href="{% url 'student_login' %}" class="btn-back">ログインに戻る</a>
+                <a href="{% url 'accounts:student_login' %}" class="btn-back">ログインに戻る</a>
             </div>
         </div>
     </div>
