--- a/appproject/accounts/templates/accounts/password_reset_email.html
+++ b/appproject/accounts/templates/accounts/password_reset_email.html
@@ -4,7 +4,7 @@
 
 パスワードの再設定をリクエストされました。以下のリンクをクリックしてパスワードをリセットしてください:
 
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ protocol }}://{{ domain }}{% url 'accounts:password_reset_confirm' uidb64=uid token=token %}
 
 このメールに心当たりがない場合は無視してください。
 {% endautoescape %}
